--- a/style.css
+++ b/style.css
@@ -21,3 +21,15 @@
     padding: 20px;
     gap: 20px;
 }
+
+.modal{
+    margin: auto;
+    height: 200px;
+    padding: 20px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
